Fix wrapping tab-headers

--- a/tabs/styles/index.styl
+++ b/tabs/styles/index.styl
@@ -2,6 +2,7 @@
   width                           100%
   position                        relative
   overflow                        hidden
+  white-space                     nowrap
 
   .tab-header
     display                       inline-block
